# burp-wrapper

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HANDOFF-cli-client.md  LICENSE  PROJECT.md  README.md  build.gradle.kts  pyproject.toml  spec.md
.claude/rules/: disciplines.md
.github/workflows/: ci.yml
bp/: CHANGELOG.md  README.md  pyproject.toml
bp/tests/: test_cli_conformance.py  test_cli_global_opts.py  test_client.py  test_collaborator.py  test_config.py  test_fuzz.py  test_ledger.py  test_obs.py  test_output.py  test_pos.py  test_scanner.py  test_securityscan.py
docs/: ALGORITHMS.md  CLI.md  INDEX.html  OUTPUT.md  RESEARCH-concepts.md  SPEC.md  STATE-AND-CONFIG.md
docs/adr/: 0001-rest-source-of-truth.md  0002-cli-name-bp.md  0003-pos-fuzzing-grammar.md  0004-fuzz-async-lifecycle.md  0005-run-ledger-observability.md  0006-methodology-sdd-tdd-ddd.md  0007-product-scope-full-functionality-configurable-safety.md  0008-implementation-language-python-fully-typed.md  INDEX.md
docs/bdd/: 01-connectivity.feature  02-proxy-capture.feature  02-repeater.feature  03-repeater.feature  04-fuzz-core.feature  05-fuzz-results.feature  06-collaborator.feature  07-scanner.feature  07-target.feature  08-target-scope.feature  08-target.feature  09-decoder-utils.feature  10-session.feature  11-run-ledger.feature  12-errors-edges.feature  13-securityscan.feature  14-config.feature  15-history.feature
docs/brain/: NEXT.md  README.md  STATE.md
src/burp_wrapper/: __init__.py  client.py
tests/: conftest.py  test_client.py
tests/tools/: test_collaborator.py  test_comparer.py  (+10 more)
(+69 files in other folders)
